fix: Y scroll prevented by hiding overflow

--- a/Frontend/src/pages/countdown/index.css
+++ b/Frontend/src/pages/countdown/index.css
@@ -196,6 +196,7 @@ p#warningTxt {
         top: 0;
         z-index: -1;
         height: 95dvh;
+        width: 100%;
         overflow: hidden;
         img {
             width: 100dvw;
